--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 ltp==4.2.13
-transformers==4.28.1
-torch==2.0.0
+transformers==4.0.0
+torch==1.6.0
 googletrans==3.1.0a0
 synonyms==3.18.0
 requests==2.28.2
 zhconv==1.4.3
-bert4keras==0.7.7
-tensorflow==2.12.0
+bert4keras==0.10.6
+keras==2.3.1
+tensorflow==1.14.0
 jieba==0.42.1
 openai==0.27.6
 wget==3.2
